--- a/01_Basics_und_Kontrolstrukturen.ipynb
+++ b/01_Basics_und_Kontrolstrukturen.ipynb
@@ -42,14 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Weitere Ausgabe\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World\")\n",
     "print(\"Hello World\")\n",
     "print(\"Hello World\")\n",
-    "print(\"Hello World\")"
+    "print(\"Hello World\")\n",
+    "\n",
+    "print(\"Weitere Ausgabe\")"
    ]
   },
   {
